--- a/pom.xml
+++ b/pom.xml
@@ -17,68 +17,29 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<!--<bootstrap.version>4.0.0-2</bootstrap.version>
-        <webjars-locator.version>0.30</webjars-locator.version>
-        <font-awesome.version>5.11.2</font-awesome.version>
-        <lombok.version>1.18.2</lombok.version>-->
 	</properties>
 
 	<dependencies>
+	<!-- security -->
+		<dependency>
+  			<groupId>org.springframework.boot</groupId>
+  			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		
+		 <dependency>
+	        <groupId>org.hibernate</groupId>
+	        <artifactId>hibernate-validator</artifactId>
+        	<version>4.1.0.Final</version>                        
+    	</dependency>
+    	
+    	<dependency>
+        	<groupId>javax.validation</groupId>
+        	<artifactId>validation-api</artifactId>
+        	<version>1.0.0.GA</version>
+    	</dependency>
+    
+    <!--  -->
 	
-	<!-- 
-	<dependency>
-    		<groupId>org.webjars</groupId>
-    		<artifactId>fullcalendar</artifactId>
-    		<version>2.2.5</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.webjars</groupId>
-		    <artifactId>momentjs</artifactId>
-		    <version>2.9.0</version>
-		</dependency>
-		<dependency>
-		    <groupId>org.webjars</groupId>
-		    <artifactId>jquery-ui</artifactId>
-		    <version>1.11.2</version>
-		</dependency>
-		<dependency>
-    		<groupId>org.webjars</groupId>
-		    <artifactId>jquery</artifactId>
-		    <version>2.1.3</version>
-		</dependency>
- -->
-	<!--  
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
-	-->
-		<!--  <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>bootstrap</artifactId>
-            <version>${bootstrap.version}</version>
-        </dependency>-->
-        
-        <!--  <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>webjars-locator</artifactId>
-            <version>${webjars-locator.version}</version>
-        </dependency>
-        
-         <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>font-awesome</artifactId>
-            <version>${font-awesome.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        
-         -->
          
           
         <dependency>
